--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 }
 body{
-  background-image: url(../img/Img/pattern04.png);
+  background-image: url(pattern04.png);
   font-size: 18px;
   line-height: 18px;
   font-weight: normal;
